--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite-plugin-glsl": "^1.5.4"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
     "lil-gui": "^0.21.0",
     "motion": "^12.23.24",
     "three": "^0.180.0"
